# cmake-talk-site

./: .gitignore  LICENSE  README.md  index.html  package.yaml  slides.md
examples/hello-world/: CMakeLists.txt
examples/hello-world/app_src/: main.cpp
examples/hello-world/include/hello/: hello_world.hpp
examples/hello-world/src/: hello_world.cpp
site/: Main.hs
slides/: cmake-concepts.md  hello-world.md
templates/: index.html
watch/: Main.hs
